--- a/src/app/about/about.module.css
+++ b/src/app/about/about.module.css
@@ -76,6 +76,7 @@
 
 .image {
   border-radius: 8px;
+  max-width: 100%; /* Ensure image does not exceed container width */
   height: auto; /* Maintain aspect ratio */
   width: auto;
 }
